--- a/anchor tag.html
+++ b/anchor tag.html
@@ -7,8 +7,7 @@
 click here to shop
 </a>
 <a href ="https://www.amazon.in">
-<img src="amazon.jpg>
-g">
+<img src="amazon.jpg">
 </a>
 </body>
 </html>
