--- a/inline styling.html
+++ b/inline styling.html
@@ -3,7 +3,7 @@
 <title>Inline styling</title>
 <head>
 <body>
-<h1 style="color:red; font-size:18px;">
+<h1 style="color:pink; font-size:18px;">
 this is inline styling
 </h1>
 </body>
